[gd_scene load_steps=8 format=3 uid="uid://caisjwxlpb7lc"]

[ext_resource type="Script" path="res://World.gd" id="1_l58kb"]
[ext_resource type="PackedScene" uid="uid://brxbdkw5us6kv" path="res://player.tscn" id="2_udwyk"]
[ext_resource type="PackedScene" uid="uid://dbnbhjsoqpp3o" path="res://level_completed.tscn" id="5_mj0lg"]
[ext_resource type="PackedScene" uid="uid://401qkab2dk2s" path="res://level_tile_map.tscn" id="6_m21ep"]

[sub_resource type="Animation" id="Animation_xm3bl"]
length = 3.2

[sub_resource type="Animation" id="Animation_epnit"]
resource_name = "countdown"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/StartIn/CenterContainer/StartInLabel:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.1, 2.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": ["3", "2", "1"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tgolc"]
_data = {
"RESET": SubResource("Animation_xm3bl"),
"countdown": SubResource("Animation_epnit")
}

[node name="World" type="Node2D"]
script = ExtResource("1_l58kb")

[node name="Player" parent="." instance=ExtResource("2_udwyk")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="LevelCompleted" parent="CanvasLayer" instance=ExtResource("5_mj0lg")]
visible = false

[node name="StartIn" type="ColorRect" parent="CanvasLayer"]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.196078)

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/StartIn"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartInLabel" type="Label" parent="CanvasLayer/StartIn/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="LevelTimeLabel" type="Label" parent="CanvasLayer"]
unique_name_in_owner = true
anchors_preset = 10
anchor_right = 1.0
offset_top = 4.0
offset_bottom = 13.0
grow_horizontal = 2
text = "0.0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="LevelTileMap" parent="." instance=ExtResource("6_m21ep")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
process_mode = 3
libraries = {
"": SubResource("AnimationLibrary_tgolc")
}

[connection signal="next_level" from="CanvasLayer/LevelCompleted" to="." method="go_next_level"]
[connection signal="retry_level" from="CanvasLayer/LevelCompleted" to="." method="retry_level"]
